Install Tailwind CSS and initialize configuration

--- a/frontend/women-techmakers-2024/index.html
+++ b/frontend/women-techmakers-2024/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<link href="/dist/styles.css" rel="stylesheet">
+
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +12,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <div class="bg-blue-500 text-white p-4 rounded-lg">
+      Hello, Tailwind CSS!
+    </div>
+    
   </body>
 </html>
